Eliminar file des API, nomes falta ambv key
