# api.yaml
@@ -153,27 +153,6 @@ paths:
       - api_key: []
 
 
-    delete:
-      summary: Eliminar archivo adjunto de un Issue en concreto
-      tags:
-        - Attachments
-      operationId: deleteFile
-      parameters:
-        - in: path
-          name: IssueId
-          required: true
-          schema:
-            type: integer
-      responses:
-        '201':
-          description: Archivo adjunto creado exitosamente
-        '400':
-          description: Parámetros inválidos
-        '401':
-          description: No autorizado
-      security:
-      - api_key: []
-
     get:
       summary: Obtener archivos adjuntos de un issue
       tags:
@@ -191,7 +170,32 @@ paths:
         '404':
           description: Issue no encontrado
 
-
+  /issues/{IssueId}/attachments/{AttachmentID}:
+    delete:
+      summary: Eliminar archivo adjunto de un Issue en concreto
+      tags:
+        - Attachments
+      operationId: deleteFile
+      parameters:
+        - in: path
+          name: IssueId
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: AttachmentID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '201':
+          description: Archivo adjunto creado exitosamente
+        '400':
+          description: Parámetros inválidos
+        '401':
+          description: No autorizado
+      security:
+      - api_key: []
 
 
   /issues/new:
